--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,24 @@
+:root {
+    --combat-color: hsl(30, 100%, 50%);
+    --dragon-color: hsl(234, 66%, 60%);
+    --eau-color: hsl(209, 85%, 55%);
+    --electrik-color: hsl(45, 100%, 49%);
+    --fee-color: hsl(300, 81%, 69%);
+    --feu-color: hsl(0, 81%, 53%);
+    --glace-color: hsl(192, 100%, 62%);
+    --insecte-color: hsl(66, 73%, 36%);
+    --normal-color: hsl(120, 2%, 63%);
+    --plante-color: hsl(112, 59%, 39%);
+    --poison-color: hsl(275, 52%, 53%);
+    --psy-color: hsl(339, 83%, 60%);
+    --roche-color: hsl(45, 21%, 59%);
+    --sol-color: hsl(25, 63%, 35%);
+    --spectre-color: hsl(300, 27%, 35%);
+    --tenebres-color: hsl(4, 13%, 28%);
+    --vol-color: hsl(207, 79%, 72%);
+}
+
+
 @font-face {
     font-family: Kong;
     src: url(../public/kongtext.ttf) format('truetype');
